Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-8323

QScriptEngine links to QtScript module instead of directly to "Making Applications Scriptable"

    XMLWordPrintable

Details

    Description

      The QScriptEngine documentation contains the text: "See the QtScript documentation for more information on the QObject integration." with a link to the QtScript module documentation. However, this page does not contain more information on the subject, it is instead found in the Making Applications Scriptable overview.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            teemukat Teemu Katajisto (Inactive)
            e8johan Johan Thelin
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes