Fix link for QObject integration documentation in QScriptEngine

Picked from 4.8 commit 3826203f744a2147bebf5f088de0d524156f59fd

Task-number: QTBUG-8323

Change-Id: I360f7592cb6a0906ab7bf402963109b7aa1edebe
Reviewed-by: Casper van Donderen <casper.vandonderen@nokia.com>